--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pomerleau ripoff</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./font-awesome-wow/css/font-awesome.min.css">
+    <title>I <3 Wieners</title>
+    <style media="screen">@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:100,300,400');</style>
 </head>
 
 <body>
@@ -13,8 +15,26 @@
       <!--  this is the main shell of the landing page.
     all the content should be in this section-->
       <section class="outerShell">
-        <button class="ham">hello world</button>
-        <a class="logo" href="#"></a>
+
+        <button class="ham">
+          <i class="burger fa fa-bars fa-3x" aria-hidden="true"></i>
+        </button>
+
+        <a class="logo" href="#"><h1 class="wien-cta">WIENERS <br> of <br> WATERTON</h1></a>
+
+<!-- This contains the landing page for the site -->
+
+        <section class="topShell">
+
+<!-- This is a container for the two buttons at the bottom of the topShell -->
+
+          <section class="lowerButtons-home">
+          <button class="menu-button" type="button" name="menu">MENU</button>
+          <button class="merch-button" type="button" name="merch">MERCH</button>
+          </section>
+
+        </section>
+        
       </section>
 
 
